--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -1,1 +1,12 @@
 @use "./partials/setup";
+@use "./partials/variables";
+@use "./partials/globals";
+@use "./partials/typography";
+@use "./partials/navBar";
+@use "./partials/header";
+@use "./partials/aboutMe";
+@use "./partials/skills";
+@use "./partials/projects";
+@use "./partials/contact";
+@use "./partials/footer";
+@use "./partials/mediaQueries";
