--- a/styles/sass/partials/_navBar.scss
+++ b/styles/sass/partials/_navBar.scss
@@ -14,4 +14,8 @@
     text-decoration: none;
     list-style: none;
     color: variables.$offWhite;
+    padding-top: 20px;
+    padding-bottom: 10px;
+    font-family: variables.$subHeaderFont;
+    font-size: 24px;
 }
