--- a/styles/sass/partials/_variables.scss
+++ b/styles/sass/partials/_variables.scss
@@ -9,12 +9,12 @@ $offWhite: #F2F4F5;
 
 //Fonts
 
-$headerFont: "";
+$headerFont: "Playfair Display";
 
-$subHeaderFont: "";
+$subHeaderFont: "Source Sans Pro";
 
-$projectTitle: "";
+$projectTitle: "Source Sans Pro";
 
-$bodyFont: "";
+$bodyFont: "Source Sans Pro";
 
 $baseFontSize: 1rem;
