--- a/styles/styles.css
+++ b/styles/styles.css
@@ -333,6 +333,35 @@ a {
   display: -ms-flexbox;
   display: flex;
   background-color: #F2F4F5;
+  height: 400px;
+}
+
+.aboutAlign {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-top: 70px;
+}
+
+.aboutAlign h3 {
+  font-family: "Playfair Display";
+  color: #546CBE;
+  font-size: 58px;
+  margin: 0 auto;
+}
+
+.aboutAlign p {
+  width: 70%;
+  font-family: "Source Sans Pro";
+  line-height: 24px;
+  text-align: center;
 }
 
 .skills {
