--- a/styles/styles.css
+++ b/styles/styles.css
@@ -371,6 +371,51 @@ a {
   background-color: #CAD2EC;
 }
 
+.skillsAlign {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-top: 70px;
+}
+
+.skillsAlign h4 {
+  font-family: "Playfair Display";
+  font-size: 60px;
+  margin: 0 auto;
+  padding-bottom: 20px;
+}
+
+.skillsFlex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 90%;
+  padding-bottom: 58px;
+}
+
+.skillsFlex div p {
+  text-align: center;
+  font-family: "Source Sans Pro";
+  font-size: 18px;
+}
+
 .projects {
   display: -webkit-box;
   display: -ms-flexbox;
