--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -26,7 +26,7 @@
     font-size: 24px;
 }
 
-.headerAlign button{
+.headerAlign a{
     font-family: variables.$bodyFont;
     border: none;
     text-decoration: none;
