--- a/styles/sass/partials/_contact.scss
+++ b/styles/sass/partials/_contact.scss
@@ -3,3 +3,37 @@
     display: flex;
     background-color: variables.$blue;
 }
+
+.contactAlign{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 300px;
+}
+
+.contactAlign h6{
+    font-family: variables.$headerFont;
+    color: variables.$offWhite;
+    font-size: 72px;
+    margin: 0 auto;
+    padding-top: 50px;
+    padding-bottom: 30px;
+}
+
+.contactAlign p{
+    font-family: variables.$bodyFont;
+    color: variables.$offWhite;
+    font-size: 20px;
+}
+
+.contactBar{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 35%;
+}
+
+.contactBar a i{
+    color: variables.$beige;
+}
