--- a/styles/sass/partials/_projects.scss
+++ b/styles/sass/partials/_projects.scss
@@ -8,13 +8,14 @@
 .projectsAlign{
     display: flex;
     flex-direction: column;
+    justify-content: space-evenly;
     align-items: center;
-    height: 1000px;
+    height: 1200px;
 }
 
 .projectsAlign h4{
     font-family: variables.$headerFont;
-    font-size: 48px;
+    font-size: 55px;
     color: variables.$deepBlue;
 }
 
@@ -34,6 +35,7 @@
 
 .projectsBox{
     padding: 15px;
+    max-width: 400px;
 }
 
 .projectsBox h5{
@@ -53,10 +55,10 @@
 }
 
 .projectsBox p{
-    width: 80%;
+    max-width: 90%;
     font-family: variables.$bodyFont;
     font-size: 16px;
-    line-height: 28px;
+    // line-height: 28px;
 }
 
 .projectsBox a{
