--- a/styles/sass/partials/_footer.scss
+++ b/styles/sass/partials/_footer.scss
@@ -3,3 +3,17 @@
     display: flex;
     background-color: variables.$deepBlue;
 }
+
+.footerAlign{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 auto;
+}
+
+.footerAlign h6{
+    font-family: variables.$bodyFont;
+    color: variables.$offWhite;
+    font-size: 18px;
+
+}
