--- a/styles/styles.css
+++ b/styles/styles.css
@@ -360,7 +360,7 @@ a {
 .aboutAlign p {
   width: 70%;
   font-family: "Source Sans Pro";
-  line-height: 24px;
+  line-height: 36px;
   text-align: center;
 }
 
@@ -567,4 +567,24 @@ a {
   display: -ms-flexbox;
   display: flex;
   background-color: #424B6D;
+}
+
+.footerAlign {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 0 auto;
+}
+
+.footerAlign h6 {
+  font-family: "Source Sans Pro";
+  color: #F2F4F5;
+  font-size: 18px;
 }
